# sklep-samochodowy

./: package-lock.json  package.json
backend/: .env.example  Cargo.toml  docker-compose.yml
backend/migrations/: 20260517195622_create_cars_table.sql  20260521171454_create_users_table.sql
backend/seeds/: seed.sql
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AuthProvider.jsx  Car.jsx  CarList.jsx  CartProvider.jsx  NavBar.jsx
frontend/src/pages/: Cart.jsx  Home.jsx  Login.jsx  Register.jsx
src/: App.jsx
src/components/: Car.jsx  CarList.jsx  CartProvider.jsx  NavBar.jsx
src/data/: cars.js
src/pages/: Cart.jsx  Root.jsx
