[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["macros"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs", "cors"] }
